--- a/style.css
+++ b/style.css
@@ -4,3 +4,6 @@
   font-family: 'Lora';         /* шрифт, кроме оговорЄнных отдельно случаев, Ч  'Lora' */
   padding: 120px 0;            /* внутренние отступы сверху и снизу по 120 пикселей, справа и слева нулевые */
 }
+.h1 {
+color : green;
+}
